# omarchy-voice-typing

./: .env  .gitignore  ARCHITECTURE_CONSTRAINTS.md  README.md  TODO.md  add_shortcut_to_tray.sh  audio-source-monitor.sh  main.py  migrate_to_voice_gateway.sh  progress.md  progress_actual.md  project_context.md  pyproject.toml  setup-audio-fallback.sh  status.md
config/: replacements.json
docs/: FEATURE_PROPOSALS.md  backlog.md
gateway/: Dockerfile  go.mod
gateway/cmd/server/: main.go
gateway/internal/assemblyai/: assemblyai.go
gateway/internal/auth/: gpg.go
gateway/internal/deepgram/: streaming.go
gateway/internal/handlers/: handlers.go  realtime.go
gateway/systemd/: voice-gateway.service
hyprwhspr-configs/: realtime-gateway.json  rest-gateway.json
local-whisper/: BENCHMARKS.md  LESSONS_LEARNED.md  pyproject.toml  server.py  test_whisper.py
local-whisper/systemd/: local-whisper.service
logs/: Harvard_speech100.wav.txt
scripts/: hyprwhspr-toggle-v2  orphan-recovery.sh
systemd/: audio-source-monitor.service
tests/: test_gateway_rest_integration.py  test_shortcut_simulation.py
tools/: debug-audio-level.sh
transcripts/: 20260105_211659_96e35d04-0120-477a-a83d-b678e6adce8b.txt  20260105_211728_11185f45-f170-487c-b78e-cb51ef4c5e70.txt  20260105_211757_86752b10-c16e-4cb4-9ac4-06d864144564.txt  20260105_211913_d322721d-a63d-410f-af3b-c00ded2110ec.txt  20260105_212222_085e401c-55ba-49b8-a219-68096f44d821.txt  20260105_212311_7d3475f9-953b-498d-88ec-856b3475aeea.txt  20260105_212331_a5afcd0d-4acf-48d1-9687-eeefe1837e43.txt
