[project]
name = "local-whisper"
version = "0.1.0"
description = "Local Whisper transcription server for offline voice typing fallback"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.0",
    "numpy",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]
